fixed image stretching problem in mincart

--- a/catalog/view/theme/ormary-new/stylesheet/style.css
+++ b/catalog/view/theme/ormary-new/stylesheet/style.css
@@ -3178,7 +3178,7 @@ a.light_btn:hover {
 }
 
 .cart_dropdown ul li .product_img img {
-	height: 100%;
+	
 	width: 100%;
 }
 
